--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     font-family: "Montserrat", sans-serif;
     }
     .container {
+      position: sticky;
       display: flex;
       justify-content: center;
     }
@@ -26,7 +27,7 @@
       
       h2 {
         margin: 0 70px;
-        margin-top: 80px;
+        margin-top: 110px;
         text-decoration: underline;
       }
     
@@ -71,7 +72,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       justify-items: center;
-      margin-top: 100px;
+      margin-top: 200px;
     }
     .image-container img {
       max-width: 80%;
