--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     
       .banner {
         background-color: rgb(226,216,222);
-        height: 400px;
+        height: 500px;
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -44,21 +45,22 @@
         width: 600px; 
         height: auto; 
         display: block;
+        margin-top: 40px;
         margin-bottom: 10px;
       }
 
       .banner-text {
         color: black;
         margin-top: 50px;
-        margin-left: 220px;
-        margin-right: 220px;
+        margin-left: 50px;
+        margin-right: 50px;
         margin-bottom: 40px; 
         font-size: 18px;
       }
     .another-paragraph {
         margin-top: 0px;
-        margin-left: 220px;
-        margin-right: 220px;
+        margin-left: 50px;
+        margin-right: 50px;
         margin-bottom: 40px; 
         font-size: 18px;
         position: absolute;
